--- a/footer.html
+++ b/footer.html
@@ -392,7 +392,7 @@
         }
         .sec-2 a:hover
         {
-            background-color: orange;
+            background-color: rgb(0, 204, 255);
             color: black;
         }
         .sec-3
@@ -493,7 +493,7 @@
         <hr width="100%">
         <section class="sec-2">
             <p>Register for free</p>
-            <a href="#">SignUp!!!</a>
+            <a href="#">SignUp!</a>
         </section>
         <hr width="100%">
         <section class="sec-3">
